--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ h2 { margin-bottom:1rem; }
 .cart-item img { width:80px; height:80px; object-fit:cover; border-radius:4px; border:1px solid #ccc; cursor:pointer;}
 .cart-item-details { flex:1; }
 .cart-item-details strong { display:block; font-size:1.1rem; }
+.cart-item-details a { color: #222; text-decoration: none; }
+.cart-item-details a:hover { color: #222; }
 .cart-item-details small { color:#666; }
 .cart-item-controls { margin-top:0.5rem; display:flex; flex-direction:column; align-items:flex-start; gap:0.5rem; }
 .qty-group { display:flex; align-items:center; gap:0.25rem; }
@@ -105,14 +107,9 @@ button, select, input, textarea { font:inherit; }
 
 <script>
 let cart = JSON.parse(localStorage.getItem('fz-cart') || '[]'), coupon = null, appliedCode = null;
-let coupons = {}; // se cargan desde JSON externo
+let coupons = {}; // cargados desde JSON externo
 
-function showToast(msg){
-  const t = document.createElement('div');
-  t.className='toast'; t.textContent=msg;
-  document.getElementById('toasts').append(t);
-  setTimeout(()=>t.remove(),3000);
-}
+function showToast(msg){ const t=document.createElement('div'); t.className='toast'; t.textContent=msg; document.getElementById('toasts').append(t); setTimeout(()=>t.remove(),3000);}
 function save(){ localStorage.setItem('fz-cart', JSON.stringify(cart)); }
 
 async function loadCoupons(){
@@ -124,11 +121,9 @@ async function loadCoupons(){
 loadCoupons();
 
 function render(){
-  const container=document.getElementById('cart-items');
-  container.innerHTML='';
+  const container=document.getElementById('cart-items'); container.innerHTML='';
   cart.forEach((item,i)=>{
-    const div=document.createElement('div');
-    div.className='cart-item';
+    const div=document.createElement('div'); div.className='cart-item';
     div.innerHTML=`
       <div class="cart-item-header">
         <img src="${item.image}" data-i="${i}">
@@ -156,9 +151,7 @@ function setQty(i,val){ cart[i].qty=Math.max(1,parseInt(val)||1); save(); render
 function removeItem(i){ cart.splice(i,1); save(); render(); showToast('Producto eliminado'); }
 
 function bindEvents(){
-  document.querySelectorAll('.cart-item img').forEach(img=>{
-    img.onclick=()=>{ const modal=document.getElementById('modal'); modal.querySelector('img').src=img.src; modal.style.display='flex'; }
-  });
+  document.querySelectorAll('.cart-item img').forEach(img=>{ img.onclick=()=>{ const modal=document.getElementById('modal'); modal.querySelector('img').src=img.src; modal.style.display='flex'; }});
   document.getElementById('modal').onclick=()=>document.getElementById('modal').style.display='none';
 }
 
@@ -174,50 +167,48 @@ function updateSummary(){
 }
 
 document.getElementById('apply-coupon').onclick=()=>{
-  const code = document.getElementById('coupon').value.trim().toUpperCase();
-  coupon = coupons[code]||null;
-  appliedCode = coupon ? code : null;
-  showToast(coupon ? 'Cupón aplicado' : 'Cupón inválido');
-  updateSummary();
+  const code=document.getElementById('coupon').value.trim().toUpperCase();
+  coupon=coupons[code]||null; appliedCode=coupon?code:null;
+  showToast(coupon?'Cupón aplicado':'Cupón inválido'); updateSummary();
 }
 
 document.getElementById('checkout').onclick=()=>{
   if(!cart.length) return showToast('Carrito vacío');
   const subValue = cart.reduce((s,i)=>s+i.price*i.qty,0);
   const discValue = coupon ? (coupon.type==='fixed'?coupon.amount:subValue*(coupon.amount/100)):0;
-  const totalValue = subValue-discValue;
-  const paymentValue = document.getElementById('payment').value;
+  const totalValue=subValue-discValue;
+  const paymentValue=document.getElementById('payment').value;
   let paymentCategory='';
   if(['USD','CUP'].includes(paymentValue)) paymentCategory='Efectivo';
   else if(['Transferencia CUP'].includes(paymentValue)) paymentCategory='Transferencia';
   else paymentCategory='Pago en el Exterior';
-  const methodText = `${paymentCategory} - ${paymentValue}`;
-  const name = document.getElementById('cliente-nombre').value;
-  const phone = document.getElementById('cliente-telefono').value;
-  const addr = encodeURIComponent(document.getElementById('cliente-direccion').value);
-  const note = encodeURIComponent(document.getElementById('note').value);
+  const methodText=`${paymentCategory} - ${paymentValue}`;
+  const name=document.getElementById('cliente-nombre').value;
+  const phone=document.getElementById('cliente-telefono').value;
+  const addr=encodeURIComponent(document.getElementById('cliente-direccion').value);
+  const note=encodeURIComponent(document.getElementById('note').value);
   const codeUsed = appliedCode || 'Ninguno';
-  const subText = `$${subValue.toFixed(2)}`;
-  const discText = `-$${discValue.toFixed(2)}`;
-  const totalText = `$${totalValue.toFixed(2)}`;
-  const items = cart.map(i=>`• ${i.name} (${i.options}) x${i.qty}`).join('%0A');
-  const msg = `*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(name)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
+  const subText=`$${subValue.toFixed(2)}`;
+  const discText=`-$${discValue.toFixed(2)}`;
+  const totalText=`$${totalValue.toFixed(2)}`;
+  const items=cart.map(i=>`• ${i.name} (${i.options}) x${i.qty}`).join('%0A');
+  const msg=`*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(name)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
   window.open(`https://wa.me/5353264753?text=${msg}`,'_blank');
   showToast('Abriendo WhatsApp...');
 }
 
-// Añadir desde URL (botones de producto)
+// Añadir desde URL
 (function(){
-  const p = new URLSearchParams(window.location.search);
+  const p=new URLSearchParams(window.location.search);
   if(p.has('producto')){
-    const name = p.get('producto');
-    const image = p.get('imagen')||'';
-    const description = p.get('descripcion')||'';
-    const price = parseFloat(p.get('precio'))||0;
-    const options = p.get('opcion1') && p.get('opcion2') ? `${p.get('opcion1')} / ${p.get('opcion2')}` : '';
-    const existing = cart.find(i => i.name===name && i.options===options);
+    const name=p.get('producto');
+    const image=p.get('imagen')||'';
+    const description=p.get('descripcion')||'';
+    const price=parseFloat(p.get('precio'))||0;
+    const options=p.get('opcion1') && p.get('opcion2') ? `${p.get('opcion1')} / ${p.get('opcion2')}` : '';
+    const existing=cart.find(i=>i.name===name && i.options===options);
     if(existing){ existing.qty+=1; existing.price=price; }
-    else{ cart.push({ name, price, image, description, options, qty:1, link: p.get('link')||'#' }); }
+    else{ cart.push({ name, price, image, description, options, qty:1, link:p.get('link')||'#'}); }
     save(); render(); showToast('Producto añadido');
   }
 })();
