--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
   // Códigos de promoción internos
   const coupons = {
-    'FIT10': { type:'percent', amount:10 },
-    'FIT5': { type:'fixed', amount:5 },
+    'ZONE10': { type:'percent', amount:10 },
+    'ZONE5': { type:'fixed', amount:5 },
     'SUPER15': { type:'percent', amount:15 } // ejemplo extra
   };
 
