--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@ h2{margin-bottom:1rem}
 <div class="toast-container" id="toasts"></div>
 
 <script>
-/* Carrito FitZone - corregido y funcional (método A: recibe productos por URL y guarda en localStorage) */
-
+/* Carrito FitZone (corregido) - recibe productos por URL y guarda en localStorage */
 const STORAGE_KEY = 'fz-cart';
 let cart = JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]');
 let coupon = null;
 let appliedCode = null;
 
-/* EDITA aquí tus códigos de promoción si quieres */
+/* Edita los cupones aquí */
 const coupons = {
   'ZONE10': { type: 'percent', amount: 10 },
   'ZONE5': { type: 'fixed', amount: 5 },
@@ -114,14 +113,16 @@ function showToast(msg){
 
 function save(){ localStorage.setItem(STORAGE_KEY, JSON.stringify(cart)); }
 
+function escapeHtml(s){ if(!s && s!==0) return ''; return String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
+function escapeAttr(s){ if(!s && s!==0) return ''; return String(s).replaceAll('"','&quot;').replaceAll("'",'&#39;'); }
+
 function render(){
   const container = document.getElementById('cart-items');
   container.innerHTML = '';
   cart.forEach((item, i) => {
     const div = document.createElement('div');
     div.className = 'cart-item';
-    // item.link may be empty string
-    const titleHtml = item.link ? `<a href="${item.link}" target="_blank" rel="noopener noreferrer">${escapeHtml(item.name)}</a>` : `<span>${escapeHtml(item.name)}</span>`;
+    const titleHtml = item.link ? `<a href="${escapeAttr(item.link)}" target="_blank" rel="noopener noreferrer">${escapeHtml(item.name)}</a>` : `<span>${escapeHtml(item.name)}</span>`;
     const optionsText = [
       item.option1 ? `${escapeHtml(item.option1.label)}: ${escapeHtml(item.option1.value)}` : '',
       item.option2 ? `${escapeHtml(item.option2.label)}: ${escapeHtml(item.option2.value)}` : ''
@@ -149,10 +150,6 @@ function render(){
   bindEvents();
   updateSummary();
 }
-
-/* helpers to escape */
-function escapeHtml(s){ if(!s && s!==0) return ''; return String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
-function escapeAttr(s){ if(!s && s!==0) return ''; return String(s).replaceAll('"','&quot;').replaceAll("'",'&#39;'); }
 
 function changeQty(i, delta){
   cart[i].qty = Math.max(1, (parseInt(cart[i].qty) || 1) + delta);
@@ -193,7 +190,7 @@ function updateSummary(){
   save();
 }
 
-/* cupones */
+/* aplicar cupón */
 document.getElementById('apply-coupon').onclick = () => {
   const code = document.getElementById('coupon').value.trim().toUpperCase();
   coupon = coupons[code] || null;
@@ -244,7 +241,7 @@ document.getElementById('checkout').onclick = () => {
       const price = parseFloat(p.get('precio')) || 0;
       const link = p.get('link') || '';
 
-      // Si ya existe mismo name+description+image+link => aumentar qty
+      // si ya existe mismo name+description+image+link => aumentar qty
       const existing = cart.find(i =>
         i.name === name &&
         (i.description || '') === description &&
@@ -269,7 +266,7 @@ document.getElementById('checkout').onclick = () => {
       save();
       render();
       showToast('Producto añadido');
-      // limpiar parámetros (opcional) para evitar re-adding si refrescan
+      // limpiar parámetros para evitar re-add si refrescan
       if(window.history && window.history.replaceState){
         const cleanUrl = window.location.origin + window.location.pathname;
         window.history.replaceState({}, document.title, cleanUrl);
