--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@ h2{margin-bottom:1rem}
 </style>
 </head>
 <body>
-<header>Carrito FitZone</header>
+<header style="display:flex; align-items:center; justify-content:center; position:relative;">
+  <!-- Casita al lado izquierdo del título -->
+  <a href="https://tu-tienda-principal.com" 
+     style="color:black; text-decoration:none; font-size:1.5rem; margin-right:0.5rem;">
+    &#127968;
+  </a>
+  Carrito FitZone
+</header>
 
 <div class="container">
   <section class="cart">
