--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h2{margin-bottom:1rem}
 <body>
 <header style="display:flex; align-items:center; justify-content:center; position:relative;">
   <!-- Casita al lado izquierdo del título -->
-  <a href="https://tu-tienda-principal.com" 
+  <a href="https://sites.google.com/view/fitzonecuba/inicio" 
      style="color:black; text-decoration:none; font-size:1.5rem; margin-right:0.5rem;">
     &#127968;
   </a>
