--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h2{margin-bottom:1rem}
     <p id="coupon-info"></p>
 
     <label for="coupon">Código Promocional</label>
-    <input id="coupon" placeholder="Ej: ZONE10">
+    <input id="coupon" placeholder="Ej: FIT10">
     <button class="btn" id="apply-coupon">Aplicar</button>
 
     <label for="payment">Método de Pago</label>
