--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h2{margin-bottom:1rem}
 <header style="position:relative; text-align:center; padding:1rem; background:#8B0000; color:#fff; font-size:1.5rem; font-weight:700;">
   <!-- Casita negra pegada al lado izquierdo -->
   <a href="https://sites.google.com/view/fitzonecuba/inicio" style="position:absolute; left:1rem; top:50%; transform:translateY(-50%); text-decoration:none;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="withe" viewBox="0 0 24 24">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
       <path d="M12 3l10 9h-3v9h-6v-6h-2v6H5v-9H2z"/>
     </svg>
   </a>
