--- a/index.html
+++ b/index.html
@@ -210,75 +210,32 @@ document.getElementById('apply-coupon').onclick = () => {
 
 /* checkout -> WhatsApp */
 document.getElementById('checkout').onclick = () => {
-  if (!cart.length) {
-    showToast('Carrito vacío');
-    return;
-  }
-
-  const subValue = cart.reduce(
-    (s, i) => s + (Number(i.price)  0) * (i.qty  1),
-    0
-  );
-
-  const discValue = coupon
-    ? coupon.type === 'fixed'
-      ? coupon.amount
-      : subValue * (coupon.amount / 100)
-    : 0;
-
+  if(!cart.length) return showToast('Carrito vacío');
+  const subValue = cart.reduce((s,i)=>s + (Number(i.price)||0) * (i.qty||1), 0);
+  const discValue = coupon ? (coupon.type === 'fixed' ? coupon.amount : subValue * (coupon.amount / 100)) : 0;
   const totalValue = subValue - discValue;
 
   const paymentValue = document.getElementById('payment').value;
   let paymentCategory = '';
-
-  if (['USD', 'CUP'].includes(paymentValue)) paymentCategory = 'Efectivo';
-  else if (paymentValue === 'Transferencia CUP') paymentCategory = 'Transferencia';
+  if(['USD','CUP'].includes(paymentValue)) paymentCategory = 'Efectivo';
+  else if(['Transferencia CUP'].includes(paymentValue)) paymentCategory = 'Transferencia';
   else paymentCategory = 'Pago en el Exterior';
 
-  const methodText = ${paymentCategory} - ${paymentValue};
-
+  const methodText = `${paymentCategory} - ${paymentValue}`;
   const clientName = document.getElementById('cliente-nombre').value || '';
   const phone = document.getElementById('cliente-telefono').value || '';
   const addr = encodeURIComponent(document.getElementById('cliente-direccion').value || '');
   const note = encodeURIComponent(document.getElementById('note').value || '');
   const codeUsed = appliedCode || 'Ninguno';
+  const subText = `$${subValue.toFixed(2)}`;
+  const discText = `-$${discValue.toFixed(2)}`;
+  const totalText = `$${totalValue.toFixed(2)}`;
 
-  const subText = $${subValue.toFixed(2)};
-  const discText = -$${discValue.toFixed(2)};
-  const totalText = $${totalValue.toFixed(2)};
+  const items = cart.map(i => `• ${i.name} x${i.qty}`).join('%0A');
 
-  /* PRODUCTOS CON TALLA Y COLOR */
-  const items = cart.map(i => {
-    let talla = '';
-    let color = '';
+  const msg = `*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(clientName)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
 
-    if (i.descripcion) {
-      const parts = i.descripcion.split('/');
-      talla = parts[0]?.trim() || '';
-      color = parts[1]?.trim() || '';
-    }
-
-    return • ${i.name} x${i.qty}%0A  ${talla}${talla && color ? ' | ' : ''}${color};
-  }).join('%0A');
-
-  const msg =
-    *🛒 Pedido FitZone*%0A%0A +
-    ${items}%0A%0A +
-    🧾 *Subtotal:* ${subText}%0A +
-    🏷 *Descuento:* ${discText}%0A +
-    💰 *Total:* ${totalText}%0A +
-    🎟 *Código:* ${codeUsed}%0A +
-    💳 *Pago:* ${methodText}%0A%0A +
-    👤 *Nombre:* ${encodeURIComponent(clientName)}%0A +
-    📞 *Teléfono:* ${encodeURIComponent(phone)}%0A +
-    📍 *Dirección:* ${addr}%0A +
-    📝 *Nota:* ${note};
-
-  window.open(
-    https://wa.me/5353264753?text=${msg},
-    '_blank'
-  );
-
+  window.open(`https://wa.me/5353264753?text=${msg}`, '_blank');
   showToast('Abriendo WhatsApp...');
 };
 
