--- a/index.html
+++ b/index.html
@@ -231,11 +231,7 @@ document.getElementById('checkout').onclick = () => {
   const discText = `-$${discValue.toFixed(2)}`;
   const totalText = `$${totalValue.toFixed(2)}`;
 
-  const items = cart.map(i => {
-  const opt1 = i.option1 ?  | ${i.option1.label}: ${i.option1.value} : '';
-  const opt2 = i.option2 ?  | ${i.option2.label}: ${i.option2.value} : '';
-  return • ${i.name} x${i.qty}${opt1}${opt2};
-}).join('%0A');
+  const items = cart.map(i => `• ${i.name} x${i.qty}`).join('%0A');
 
   const msg = `*🛒 Pedido FitZone*%0A%0A${items}%0A%0A🧾 *Subtotal:* ${subText}%0A🏷 *Descuento:* ${discText}%0A💰 *Total:* ${totalText}%0A🎟 *Código promocional:* ${codeUsed}%0A💳 *Pago:* ${methodText}%0A%0A👤 *Nombre:* ${encodeURIComponent(clientName)}%0A📞 *Teléfono:* ${encodeURIComponent(phone)}%0A📍 *Dirección:* ${addr}%0A📝 *Nota:* ${note}`;
 
