--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h2{margin-bottom:1rem}
 <header>
   <!-- Casita negra pegada al lado izquierdo -->
   <a href="https://sites.google.com/view/fitzonecuba/inicio" style="position:absolute; left:1rem; top:50%; transform:translateY(-50%); text-decoration:none;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#000000" viewBox="0 0 24 24">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" viewBox="0 0 24 24">
       <path d="M12 3l10 9h-3v9h-6v-6h-2v6H5v-9H2z"/>
     </svg>
   </a>
